--- a/src/ui/html/content/gestures.html
+++ b/src/ui/html/content/gestures.html
@@ -5,12 +5,7 @@
   <link rel="stylesheet" href="/ui/css/layout.css">
   <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" id="Theme">
-
-  <script src="/ui/js/modules/overlay.js" defer></script>
-  <script src="/ui/js/modules/command-bar.js" defer></script>
-  <script src="/ui/js/modules/gesture-popup.js" defer></script>
-  <script src="/ui/js/content.js" defer></script>
-  <script src="/ui/js/content/gestures.js" defer></script>
+  <script src="/ui/js/content/gestures.js" type="module"></script>
 </head>
 
 <body>
