--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -6,9 +6,7 @@
   <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" href="/ui/css/blacklist.css">
   <link rel="stylesheet" id="Theme">
-
-  <script src="/ui/js/content.js" defer></script>
-  <script src="/ui/js/content/blacklist.js" defer></script>
+  <script src="/ui/js/content/blacklist.js" type="module"></script>
 </head>
 <body>
   <main>
