--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -15,9 +15,7 @@
 
 <body>
   <div id ="Sidebar">
-    <h1>
-      <img src="/res/img/iconx96.png">
-    </h1>
+    <img class="logo" src="/res/img/iconx96.png">
     <ul class="navigation">
       <li class="nav-item">
         <a href="#settings">
