adjusted next focus values for close tab command

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -108,7 +108,7 @@
           <option value="default" data-i18n="commandSettingLabelTabNextFocusDefault"></option>
           <option value="previous" data-i18n="commandSettingLabelTabNextFocusPrevious"></option>
           <option value="next" data-i18n="commandSettingLabelTabNextFocusNext"></option>
-          <option value="last" data-i18n="commandSettingLabelTabNextFocusRecently"></option>
+          <option value="recent" data-i18n="commandSettingLabelTabNextFocusRecently"></option>
         </select>
       </div>
     </template>
