prevented urls on About to open in the iframe

--- a/src/ui/html/content/about.html
+++ b/src/ui/html/content/about.html
@@ -25,8 +25,8 @@
     <hr>
     <p>
       <strong data-i18n="aboutContributors"></strong>
-      <a href="https://github.com/Robbendebiene/Gesturefy/graphs/contributors">Github</a>,
-      <a href="https://crowdin.com/project/gesturefy">Crowdin</a>
+      <a target="_blank" href="https://github.com/Robbendebiene/Gesturefy/graphs/contributors">Github</a>,
+      <a target="_blank" href="https://crowdin.com/project/gesturefy">Crowdin</a>
     </p>
     <hr>
     <ul class="horizontal-list">
