changed the Search Selected text command to use the default search engine if search engine url is omitted

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -72,7 +72,7 @@
     <template data-commands="SearchTextSelection">
       <span data-i18n="commandSettingLabelSearchEngineURL" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionSearchEngineURL" class="cb-setting-description"></p>
-      <input name="searchEngineURL" class="input-field" required="" type="url">
+      <input name="searchEngineURL" class="input-field" type="url">
     </template>
 
     <template data-commands="OpenCustomURL OpenCustomURLInNewTab">
