--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -69,7 +69,7 @@
       <p data-i18n="commandSettingDescriptionSavePromptDialog" class="cb-setting-description"></p>
     </template>
 
-    <template data-commands="SearchTextSelection">
+    <template data-commands="SearchTextSelection SearchClipboard">
       <span data-i18n="commandSettingLabelSearchEngineURL" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionSearchEngineURL" class="cb-setting-description"></p>
       <input name="searchEngineURL" class="input-field" type="url">
@@ -81,7 +81,7 @@
       <input name="url" class="input-field" required="" type="url">
     </template>
 
-    <template data-commands="NewTab OpenImageInNewTab SearchTextSelection OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
+    <template data-commands="NewTab OpenImageInNewTab SearchTextSelection SearchClipboard OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
       <span data-i18n="commandSettingLabelNewTabPosition" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionNewTabPosition" class="cb-setting-description"></p>
       <div class="select-wrapper">
@@ -93,7 +93,7 @@
       </div>
     </template>
 
-    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchTextSelection OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
+    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchTextSelection SearchClipboard OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
       <span data-i18n="commandSettingLabelNewTabFocus" class="cb-setting-name"></span>
       <input name="focus" id="CommandSettingTabFocus" class="toggle-button" type="checkbox">
       <label for="CommandSettingTabFocus"></label>
