added "Open Link In New Window" option to open an empty window if no link or url was selected (#340)

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -160,6 +160,13 @@
       <p data-i18n="commandSettingDescriptionOpenEmptyTab" class="cb-setting-description"></p>
     </template>
 
+    <template data-commands="OpenLinkInNewWindow OpenLinkInNewPrivateWindow">
+      <span data-i18n="commandSettingLabelOpenEmptyWindow" class="cb-setting-name"></span>
+      <input name="emptyWindow" id="CommandSettingToEmptyWindow" class="toggle-button" type="checkbox">
+      <label for="CommandSettingToEmptyWindow"></label>
+      <p data-i18n="commandSettingDescriptionOpenEmptyWindow" class="cb-setting-description"></p>
+    </template>
+
     <template data-commands="SendMessageToOtherAddon">
       <span data-i18n="commandSettingLabelAddonId" class="cb-setting-name"></span>
       <p class="cb-setting-description">
