added advanced setting for "Duplicate Tab" command to specify if the new tab should be focused or not (#363)

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -93,7 +93,7 @@
       </div>
     </template>
 
-    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchTextSelection SearchClipboard PopupSearchEngines OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
+    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchTextSelection SearchClipboard PopupSearchEngines OpenCustomURLInNewTab OpenURLFromClipboardInNewTab DuplicateTab">
       <span data-i18n="commandSettingLabelNewTabFocus" class="cb-setting-name"></span>
       <input name="focus" id="CommandSettingTabFocus" class="toggle-button" type="checkbox">
       <label for="CommandSettingTabFocus"></label>
