added new commands: Move right tabs to new window (#362), Move left tabs to new window, Move tab to start, Move tab to end; changed function name TabToNewWindow -> MoveTabToNewWindow

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -69,6 +69,20 @@
       <p data-i18n="commandSettingDescriptionSavePromptDialog" class="cb-setting-description"></p>
     </template>
 
+    <template data-commands="MoveLeftTabsToNewWindow MoveRightTabsToNewWindow">
+      <span data-i18n="commandSettingLabelNewWindowFocus" class="cb-setting-name"></span>
+      <input name="focus" id="CommandSettingNewWindowFocus" class="toggle-button" type="checkbox">
+      <label for="CommandSettingNewWindowFocus"></label>
+      <p data-i18n="commandSettingDescriptionNewWindowFocus" class="cb-setting-description"></p>
+    </template>
+
+    <template data-commands="MoveLeftTabsToNewWindow MoveRightTabsToNewWindow">
+      <span data-i18n="commandSettingLabelTabIncludeCurrent" class="cb-setting-name"></span>
+      <input name="includeCurrent" id="CommandSettingTabIncludeCurrent" class="toggle-button" type="checkbox">
+      <label for="CommandSettingTabIncludeCurrent"></label>
+      <p data-i18n="commandSettingDescriptionTabIncludeCurrent" class="cb-setting-description"></p>
+    </template>
+
     <template data-commands="SearchTextSelection SearchClipboard">
       <span data-i18n="commandSettingLabelSearchEngineURL" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionSearchEngineURL" class="cb-setting-description"></p>
