added Save Link command (#178)

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -62,7 +62,7 @@
   <iframe id="Content" height="100%" src="#"></iframe>
 
   <template id="CommandSettings">
-    <template data-commands="SaveImage">
+    <template data-commands="SaveImage SaveLink">
       <span data-i18n="commandSettingLabelSavePromptDialog" class="cb-setting-name"></span>
       <input name="promptDialog" id="CommandSettingSavePromptDialog" class="toggle-button" type="checkbox">
       <label for="CommandSettingSavePromptDialog"></label>
