minor migration text adjustment

--- a/src/core/migration/migration.html
+++ b/src/core/migration/migration.html
@@ -159,7 +159,7 @@
     </ul>
     <h2 class="spacing">What about disadvantages?</h2>
     <p>
-      The migration of your gestures to the new gesture format cannot be fully automated. This is because the conversion is not bijective and depends on your personal gesture style. <em>Because of that you should readjust your gestures that consisted of more than 2 directions.
+      The migration of your gestures to the new gesture format cannot be fully automated. This is because the conversion is not bijective and depends on your personal gesture style. <em>Because of that you should readjust your gestures that consisted of more than 1 direction.
       Otherwise some of your gestures might not work as expected.</em>
     </p>
     <hr>
